--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -126,6 +126,11 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>exifweb</groupId>
             <artifactId>util</artifactId>
             <classifier>tests</classifier>
