--- a/pom.xml
+++ b/pom.xml
@@ -918,6 +918,10 @@
                 </plugin>
 
                 <plugin>
+                    <!--
+                        see https://issues.apache.org/jira/browse/SUREFIRE-1534
+                        for <artifactId>storage-jpa2x-hbm-impl</artifactId> usage
+                    -->
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <dependencies>
