--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -135,7 +135,7 @@
 
 	        when NOT using modules but using java 10:
 	        - this mvn dependency must be enabled
-	        - need in setenv.sh: JAVA_MODULES="--add-modules java.xml.bind"
+	        - need in setenv.sh: JAVA_MODULES="-add-modules java.xml.bind"
 	        - jaxb-api and jaxb-runtime need not to be copied into tomcat/lib
         -->
         <dependency>
