WebSecurityConfig: usersFile replaces JdbcDaoImpl based UserDetailsService exifweb.properties: users.file=file:/home/adr/apps/etc/exiweb-users.properties RootInMemoryDbConfig: add WebSecurityConfig.class + PropertiesUtils HibernatePropertiesConfig.keepEnvProps

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -150,6 +150,11 @@
         <dependency>
             <groupId>exifweb</groupId>
             <artifactId>util</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>exifweb</groupId>
+            <artifactId>util</artifactId>
             <classifier>tests</classifier>
             <version>${project.version}</version>
             <scope>test</scope>
