--- a/webapp/src/main/resources/exifweb.properties
+++ b/webapp/src/main/resources/exifweb.properties
@@ -29,3 +29,5 @@ system.default.niceness=-3
 async.timeout=7200000
 # see tech.log
 ehcache.spring.name=spring-cache
+# users properties file
+users.file=file:/home/adr/apps/etc/exiweb-users.properties
