--- a/pom.xml
+++ b/pom.xml
@@ -752,6 +752,13 @@
                 <version>2.3.0</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.23.1-GA</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
