--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <metadata.extractor.version>2.11.0</metadata.extractor.version>
         <net.sf.json>2.4</net.sf.json>
         <javax.inject.version>1</javax.inject.version>
-        <jstl>1.2</jstl>
+        <jstl.version>1.2</jstl.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
         <!--
@@ -566,10 +566,16 @@
                 <version>${jackson-datatype-hibernate5.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jstl</artifactId>
+                <version>${jstl.version}</version>
+            </dependency>
+
             <!--<dependency>-->
-            <!--<groupId>javax.servlet</groupId>-->
-            <!--<artifactId>jstl</artifactId>-->
-            <!--<version>${jstl}</version>-->
+            <!--<groupId>javax.servlet.jsp.jstl</groupId>-->
+            <!--<artifactId>jstl-api</artifactId>-->
+            <!--<version>${jstl.version}</version>-->
             <!--</dependency>-->
 
             <dependency>
