--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -97,10 +97,10 @@
             <artifactId>jackson-datatype-hibernate5</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>javax.servlet</groupId>-->
-        <!--<artifactId>jstl</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
