--- a/storage-impl-hbm/src/main/resources/hibernate/hibernate-common.properties
+++ b/storage-impl-hbm/src/main/resources/hibernate/hibernate-common.properties
@@ -9,7 +9,7 @@ hibernate.validator.autoregister_listeners=false
 # hibernate.cache.use_structured_entries=true
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
-# hbm 4x
+# hbm 4.x
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 # hbm versions [3.3, 4.x)
 #hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.EhCacheRegionFactory
