url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL;AUTOCOMMIT=OFF ScriptUtils.executeSqlScript & conn.commit()

--- a/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-in-memory.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-in-memory.properties
@@ -1,6 +1,6 @@
 # H2 Database
 driverClassName=org.h2.Driver
-url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL
+url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL;AUTOCOMMIT=OFF
 #
 # HSQLDB (HyperSQL Database)
 #driverClassName=org.hsqldb.jdbc.JDBCDriver
