+ DBInitConfiguration, PatchedDataSourceInitializer, ApacheService4Test

--- a/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-in-memory.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-in-memory.properties
@@ -1,6 +1,7 @@
 # H2 Database
 driverClassName=org.h2.Driver
 url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL;AUTOCOMMIT=OFF
+#url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL;AUTOCOMMIT=ON
 #
 # HSQLDB (HyperSQL Database)
 #driverClassName=org.hsqldb.jdbc.JDBCDriver
