--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -201,6 +201,12 @@
                 </dependency>
         -->
 
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <profiles>
