--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
         <!--<springframework.version>4.3.14.RELEASE</springframework.version>-->
         <!--<spring-security.version>3.2.10.RELEASE</spring-security.version>-->
         <!--<spring-security.version>4.2.4.RELEASE</spring-security.version>-->
-        <springframework.version>5.1.2.RELEASE</springframework.version>
-        <spring-security.version>5.1.1.RELEASE</spring-security.version>
-        <spring-data-jpa.version>2.1.2.RELEASE</spring-data-jpa.version>
+        <springframework.version>5.1.6.RELEASE</springframework.version>
+        <spring-security.version>5.1.5.RELEASE</spring-security.version>
+        <spring-data-jpa.version>2.1.6.RELEASE</spring-data-jpa.version>
 
         <!--<hibernate.version>4.3.11.Final</hibernate.version>-->
         <!--<jackson-datatype-hibernate4.version>2.9.4</jackson-datatype-hibernate4.version>-->
@@ -738,6 +738,12 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${springframework.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-test</artifactId>
+                <version>${spring-security.version}</version>
                 <scope>test</scope>
             </dependency>
             <!--
