mysql time zone problem after upgrade to 8.0.16

--- a/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-stage.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-stage.properties
@@ -5,6 +5,7 @@
 #
 #jdbcUrl=jdbc:mysql://${db.host}:3306/exifweb-tests?useSSL=false
 jdbcUrl=jdbc:mysql://adrhc.go.ro:3306/exifweb-tests?useSSL=false
+#jdbcUrl=jdbc:mysql://adrhc.go.ro:3306/exifweb-tests?useSSL=false&serverTimezone=Europe/Bucharest
 username=exifweb
 password=exifweb
 minimumIdle=1
