--- a/pom.xml
+++ b/pom.xml
@@ -103,49 +103,49 @@
             <!--</dependency>-->
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>storage-entities</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>cdm</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>util</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>storage-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>storage-impl-hbm</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>storage-jpa2x-hbm-impl</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>photos</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>util</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
@@ -153,7 +153,7 @@
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>storage-entities</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
@@ -161,7 +161,7 @@
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>storage-impl-hbm</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
@@ -169,7 +169,7 @@
             </dependency>
 
             <dependency>
-                <groupId>exifweb</groupId>
+                <groupId>image.exifweb</groupId>
                 <artifactId>storage-jpa2x-hbm-impl</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
