--- a/storage-api/pom.xml
+++ b/storage-api/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>exifweb</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>exifweb</groupId>
+    <groupId>image.exifweb</groupId>
     <artifactId>storage-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>storage-api</name>
@@ -16,11 +16,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>cdm</artifactId>
         </dependency>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>storage-entities</artifactId>
         </dependency>
     </dependencies>
