--- a/storage-entities/pom.xml
+++ b/storage-entities/pom.xml
@@ -8,7 +8,7 @@
         <artifactId>exifweb</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>exifweb</groupId>
+    <groupId>image.exifweb</groupId>
     <artifactId>storage-entities</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>storage-entities</name>
@@ -22,7 +22,7 @@
             <artifactId>hibernate-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>cdm</artifactId>
             <exclusions>
                 <exclusion>
@@ -32,7 +32,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>util</artifactId>
             <classifier>tests</classifier>
             <version>${project.version}</version>
