--- a/storage-jpa2x-hbm-impl/pom.xml
+++ b/storage-jpa2x-hbm-impl/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>exifweb</groupId>
+    <groupId>image.exifweb</groupId>
     <artifactId>storage-jpa2x-hbm-impl</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -18,23 +18,23 @@
 
     <dependencies>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>util</artifactId>
         </dependency>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>cdm</artifactId>
         </dependency>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>storage-entities</artifactId>
         </dependency>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>storage-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>storage-impl-hbm</artifactId>
         </dependency>
 
@@ -139,14 +139,14 @@
         </dependency>-->
 
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>util</artifactId>
             <classifier>tests</classifier>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>exifweb</groupId>
+            <groupId>image.exifweb</groupId>
             <artifactId>storage-entities</artifactId>
             <classifier>tests</classifier>
             <version>${project.version}</version>
